--- a/main.css
+++ b/main.css
@@ -2,12 +2,38 @@
 /* Made by Pace Marier */
 /* Please do not copy */
 
+/* Abnormally Named Menu Bar Classes */
+
+.durr {
+  padding-top: 2px;
+  padding-bottom: 4px;
+  width: 50px;
+}
+
+.dilly {
+  padding-top: 2px;
+  padding-left: 10px;
+}
+
+.dally {
+  position:absolute;
+  margin-top: 33px;
+  padding-left: 75px;
+  z-index: 5;
+}
+
 .nav button {
   color: #5a5a5a;
   font-size: 11px;
   font-weight: bold;
   padding: 2px 10px;
   text-transform: uppercase;
+}
+
+/* Footer css*/
+
+.footer {
+  margin-top:-20px;
 }
 
 .footer li {
@@ -41,6 +67,8 @@
   text-decoration: none;
 }
 
+/* Mo' Menu Bar Stuff*/
+
 .nav li {
   display: inline;
 }
@@ -53,8 +81,8 @@
 }
 
 .nav .logo img {
-  padding-top: 10px;
-  padding-bottom: 10px;
+  padding-top: 0px;
+  padding-bottom: 0px;
   width: 150px;
   height: auto;
 }
@@ -63,26 +91,24 @@
   display: block;
 }
 
-.jumbotron {
-  background: url('img/jumbotron.png') repeat center center;
-}
+/* jumbotron classes (mainly unused now)*/
 
 .jumbotron .container {
   position: relative;
-  top: 1px;
+  top: 0px;
+  padding-bottom: 0;
   text-align: center;
 }
 
 .jumbotron img {
-    padding-top: 1px;
-    padding-bottom: 1px;
+    padding-top: 0px;
+    padding-bottom: 0px;
     width: 100px;
     height: auto;
 }
 
 }
 .jumbotron h3 {
-  color: #fff;
   font-family: 'Shift', sans-serif;
   font-weight: bold;
 }
@@ -92,8 +118,14 @@
   color: #fff;
 }
 
+.jumbotron a:link {
+  color: #fff;
+}
+
+/* learn more container*/
 .learn-more {
   background-color: #f7f7f7;
+  border-top:1px solid #dbdbdb;
 }
 
 .learn-more h3 {
@@ -121,10 +153,12 @@
   text-decoration: none;
 }
 
+/* angry carrot container*/
 .angry-carrot {
     background-color:#efefef;
     border-bottom:1px solid #dbdbdb;
     border-top:1px solid #dbdbdb;
+    margin-bottom: 30px;
     text-align: center
 }
 
@@ -136,4 +170,121 @@
 
 .angry-carrot p {
     font-size:15px;
+}
+
+/* Body (duh.)*/
+body {
+  color: #5a5a5a;
+}
+
+
+/* Menu Bar*/
+
+.navbar-wrapper {
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+  z-index: 20;
+}
+
+.navbar-wrapper > .container {
+  padding-right: 0;
+  padding-left: 0;
+}
+.navbar-wrapper .navbar {
+  padding-right: 15px;
+  padding-left: 15px;
+}
+.navbar-wrapper .navbar .container {
+  width: auto;
+}
+
+/* Carousel */
+
+.carousel {
+  height: 450px;
+  width: 765px;
+  margin-bottom: 15px;
+  margin-top: 10px;
+}
+
+.carousel-caption {
+  z-index: 10;
+}
+
+.carousel .item {
+  height: 450px;
+  background-color: #777;
+}
+.carousel-inner > .item > img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 500px;
+}
+
+/* Featurette */
+
+.featurette-divider {
+  border-top:1px solid #dbdbdb;
+}
+
+.featurette-heading {
+  font-weight: 300;
+  line-height: 1;
+  letter-spacing: -1px;
+}
+
+/* Responsive */
+
+@media (min-width: 768px) {
+
+  .navbar-wrapper {
+    margin-top: 20px;
+  }
+  .navbar-wrapper .container {
+    padding-right: 15px;
+    padding-left: 15px;
+  }
+  .navbar-wrapper .navbar {
+    padding-right: 0;
+    padding-left: 0;
+  }
+
+  .navbar-wrapper .navbar {
+    border-radius: 4px;
+  }
+
+  .carousel-caption p {
+    margin-bottom: 20px;
+    font-size: 21px;
+    line-height: 1.4;
+  }
+
+  .featurette-heading {
+    font-size: 50px;
+  }
+}
+
+@media (min-width: 992px) {
+  .featurette-heading {
+    margin-top: 120px;
+  }
+}
+@media (min-width: 992px) {
+  .featurette-heading-games {
+    margin-top: 50px;
+  }
+}
+
+/* Colomn Centered */
+
+.col-centered {
+    display:inline-block;
+    float:none;
+    /* reset the text-align */
+    text-align:left;
+    /* inline-block space fix */
+    margin-right:-4px;
 }
